build: :sparkles: Base install build

--- a/.gitignore
+++ b/.gitignore
@@ -249,6 +249,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+*.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -299,7 +300,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-
 
 .python/
 Session.vim
