--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -35,6 +35,7 @@ services:
       - 80:80
       - 443:443
     volumes:
+      - .:/app/
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
     depends_on:
