--- a/spas.yml
+++ b/spas.yml
@@ -6,50 +6,36 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - asgiref=3.8.1=py310h06a4308_0
-  - attrs=24.2.0=py310h06a4308_0
   - bzip2=1.0.8=h5eee18b_6
   - ca-certificates=2024.11.26=h06a4308_0
   - cyrus-sasl=2.1.28=h52b45da_1
-  - freetype=2.12.1=h4a9f257_0
-  - jpeg=9e=h5eee18b_3
   - krb5=1.20.1=h143b758_1
-  - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.40=h12ee557_0
-  - lerc=3.0=h295c915_0
-  - libdeflate=1.17=h5eee18b_1
   - libedit=3.1.20230828=h5eee18b_0
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
-  - libpng=1.6.39=h5eee18b_0
   - libpq=17.0=hdbd6064_0
   - libstdcxx-ng=11.2.0=h1234567_1
-  - libtiff=4.5.1=h6a678d5_0
   - libuuid=1.41.5=h5eee18b_0
-  - libwebp-base=1.3.2=h5eee18b_1
-  - lz4-c=1.9.4=h6a678d5_1
   - ncurses=6.4=h6a678d5_0
-  - openjpeg=2.5.2=he7f1fd0_0
   - openldap=2.6.4=h42fbc30_0
   - openssl=3.0.15=h5eee18b_0
-  - pillow=11.0.0=py310hfdbf927_0
   - pip=24.2=py310h06a4308_0
   - psycopg2=2.9.9=py310h5eee18b_1
   - python=3.10.15=he870216_1
   - readline=8.2=h5eee18b_0
   - setuptools=75.1.0=py310h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
-  - sqlparse=0.4.4=py310h06a4308_0
   - tk=8.6.14=h39e8969_0
-  - typing_extensions=4.11.0=py310h06a4308_0
   - tzdata=2024b=h04d1e81_0
   - wheel=0.44.0=py310h06a4308_0
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
-  - zstd=1.5.6=hc292b87_0
   - pip:
+      - asgiref==3.8.1
       - async-timeout==5.0.1
+      - attrs==24.2.0
       - autobahn==24.4.2
       - automat==24.8.1
       - cffi==1.17.1
@@ -58,19 +44,23 @@ dependencies:
       - constantly==23.10.4
       - cryptography==44.0.0
       - daphne==4.1.2
+      - django==5.1.4
       - django-extensions==3.2.3
       - hyperlink==21.0.0
       - idna==3.10
       - incremental==24.7.2
       - msgpack==1.1.0
+      - pillow==11.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
       - pycparser==2.22
       - pyopenssl==24.3.0
       - redis==5.2.0
       - service-identity==24.2.0
+      - sqlparse==0.5.2
       - tomli==2.2.1
       - twisted==24.11.0
       - txaio==23.1.1
+      - typing-extensions==4.12.2
       - zope-interface==7.2
 prefix: /home/vscode/miniconda3/envs/spas
