--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -56,8 +56,8 @@ RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -
   chmod +x conda.sh && \
   ./conda.sh -b && \
   . /home/vscode/miniconda3/bin/activate && \
-  conda create -n spas python=3.10
-# conda env create -f spas.yml
+  # conda create -n spas python=3.10
+  conda env create -f spas.yml
 
 WORKDIR /app
 
@@ -68,4 +68,4 @@ RUN direnv allow
 EXPOSE 8000
 
 # ENTRYPOINT ["./django-launcher.sh"]
-ENTRYPOINT [ "tail", "-f", "/dev/zero" ]
+ENTRYPOINT [ "tail", "-f", "/dev/null" ]
