--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ..:/app/
       - ~/.ssh:/home/vscode/.ssh:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - db
       - redis
